Redis + multiple additions