@@ -18,6 +18,7 @@ import com.nti.nti_backend.user.Role;
 import com.nti.nti_backend.user.User;
 import com.nti.nti_backend.user.UserRepository;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.CacheManager;
 import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
@@ -33,9 +34,11 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
+
+import static com.nti.nti_backend.config.CacheNames.*;
+import org.springframework.cache.annotation.*;
 
 @Service
 @RequiredArgsConstructor
@@ -60,7 +63,19 @@ public class OrganizationService {
                 .getPrincipal();
     }
 
+    private boolean isAdminOrSuperAdmin(User user) {
+        return user.hasRole(Role.ADMIN) || user.hasRole(Role.SUPER_ADMIN);
+    }
+
+    private boolean isSuperAdmin(User user) {
+        return user.hasRole(Role.SUPER_ADMIN);
+    }
+
     // CREATE
+    @Caching(evict = {
+            @CacheEvict(value = ORGANIZATIONS, allEntries = true),
+            @CacheEvict(value = ORGANIZATIONS_PUBLIC, allEntries = true)
+    })
     @Transactional
     public OrganizationResponseDTO create(OrganizationRequestDTO dto) {
         if (orgRepository.existsByIco(dto.getIco())) {
@@ -105,14 +120,16 @@ public class OrganizationService {
     }
 
     // Read All
+    @Cacheable(value = ORGANIZATIONS, unless = "#result == null || #result.isEmpty()")
     @Transactional(readOnly = true)
     public List<OrganizationResponseDTO> findAll() {
         return orgRepository.findAll().stream()
                 .map(this::toResponseDTOSlim)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     //Read One
+    @Cacheable(value = ORGANIZATION, key = "#id")
     @Transactional(readOnly = true)
     public OrganizationResponseDTO findById(UUID id) {
         Organization org = orgRepository.findByIdWithMembers(id)
@@ -121,15 +138,20 @@ public class OrganizationService {
     }
 
     // Update
+    @Caching(evict = {
+            @CacheEvict(value = ORGANIZATIONS, allEntries = true),
+            @CacheEvict(value = ORGANIZATION, key = "#id"),
+            @CacheEvict(value = ORGANIZATIONS_PUBLIC, allEntries = true)
+    })
     @Transactional
     public OrganizationResponseDTO update(UUID id, OrganizationRequestDTO dto) {
         Organization org = orgRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Organization not found with id: " + id));
 
         User currentUser = getCurrentUser();
-        boolean isAdmin = currentUser.hasRole(Role.ADMIN);
+        boolean canEdit = isAdminOrSuperAdmin(currentUser);
 
-        if (!isAdmin) {
+        if (!canEdit) {
             OrgMember membership = memberRepository
                     .findByOrganizationIdAndUserId(id, currentUser.getId())
                     .orElseThrow(() -> new ConflictException("You are not a member of this organization"));
@@ -156,15 +178,19 @@ public class OrganizationService {
     }
 
     // Delete
+    @Caching(evict = {
+            @CacheEvict(value = ORGANIZATIONS, allEntries = true),
+            @CacheEvict(value = ORGANIZATION, key = "#id"),
+            @CacheEvict(value = ORGANIZATIONS_PUBLIC, allEntries = true),
+            @CacheEvict(value = ORG_MEMBERS, key = "#id")
+    })
     @Transactional
     public void delete(UUID id) {
         Organization org = orgRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Organization not found with id: " + id));
-
         User currentUser = getCurrentUser();
-        boolean isAdmin = currentUser.hasRole(Role.ADMIN);
 
-        if (!isAdmin) {
+        if (!isSuperAdmin(currentUser)) {
             OrgMember membership = memberRepository
                     .findByOrganizationIdAndUserId(id, currentUser.getId())
                     .orElseThrow(() -> new ConflictException("You are not a member of this organization"));
@@ -179,6 +205,7 @@ public class OrganizationService {
     }
 
     // GET members
+    @Cacheable(value = ORG_MEMBERS, key = "#orgId")
     @Transactional(readOnly = true)
     public List<OrgMemberDTO> getMembers(UUID orgId) {
         if (!orgRepository.existsById(orgId)) {
@@ -194,20 +221,20 @@ public class OrganizationService {
                         .role(m.getRole())
                         .joinedAt(m.getJoinedAt())
                         .build()
-                ).toList();
+                ).collect(Collectors.toList());
     }
 
     // ADD Member
+    @CacheEvict(value = ORG_MEMBERS, key = "#orgId")
     @Transactional
     public OrgMemberDTO addMember(UUID orgId, AddMemberRequestDTO dto) {
         Organization org = orgRepository.findById(orgId)
                 .orElseThrow(() -> new ResourceNotFoundException("Organization not found with id: " + orgId));
 
-        Long currentUserId = getCurrentUser().getId();
-        boolean isAdmin = getCurrentUser().hasRole(Role.ADMIN);
-        if (!isAdmin) {
+        User currentUser = getCurrentUser();
+        if (!isAdminOrSuperAdmin(currentUser)) {
             OrgMember requestingMember = memberRepository
-                    .findByOrganizationIdAndUserId(orgId,currentUserId)
+                    .findByOrganizationIdAndUserId(orgId,currentUser.getId())
                     .orElseThrow(() -> new ConflictException("You are not a member of this organization"));
             if (requestingMember.getRole() != OrgMemberRole.OWNER) {
                 throw new ConflictException("Only OWNER or ADMIN can add members to this organization");
@@ -219,9 +246,10 @@ public class OrganizationService {
                         "No user found with email: " + dto.getEmail()
                 ));
 
-        if (memberRepository.existsByOrganizationIdAndUserId(orgId, userToAdd.getId())) {
+        if (!memberRepository.findAllByUserId(userToAdd.getId()).isEmpty()) {
             throw new ConflictException(
-                    "User " + dto.getEmail() + " already exists"
+                    "User " + dto.getEmail()
+                            + " is already a member of an organization"
             );
         }
 
@@ -245,6 +273,7 @@ public class OrganizationService {
                 .build();
     }
 
+    @CacheEvict(value = ORG_MEMBERS, key = "#orgId")
     @Transactional
     public void inviteMember(UUID orgId, InviteOrgMemberRequest request) {
         Organization org = orgRepository.findById(orgId)
@@ -253,9 +282,8 @@ public class OrganizationService {
                 ));
 
         User currentUser = getCurrentUser();
-        boolean isAdmin = currentUser.hasRole(Role.ADMIN);
 
-        if (!isAdmin) {
+        if (!isAdminOrSuperAdmin(currentUser)) {
             OrgMember membership = memberRepository
                     .findByOrganizationIdAndUserId(orgId, currentUser.getId())
                     .orElseThrow(() -> new ConflictException(
@@ -270,9 +298,10 @@ public class OrganizationService {
         String email = request.email();
         // Deny if user already exists and is a member
         userRepository.findByEmail(email).ifPresent(existingUser -> {
-            if (memberRepository.existsByOrganizationIdAndUserId(orgId, existingUser.getId())) {
+            if (!memberRepository.findAllByUserId(existingUser.getId()).isEmpty()) {
                 throw new ConflictException(
-                        "User " + email + " is already a member of this organization"
+                        "User " + email
+                                + " is already a member of an organization"
                 );
             }
         });
@@ -313,24 +342,25 @@ public class OrganizationService {
         return memberRepository.findAllByUserId(currentUserId)
                 .stream()
                 .map(m -> toResponseDTOSlim(m.getOrganization()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // REMOVE Member
+    @CacheEvict(value = ORG_MEMBERS, key = "#orgId")
     public void removeMember(UUID orgId, UUID memberId) {
         if (!orgRepository.existsById(orgId)) {
             throw new ResourceNotFoundException("Organization not found with id: " + orgId);
         }
 
-        Long currentUserId = getCurrentUser().getId();
-        boolean isAdmin = getCurrentUser().hasRole(Role.ADMIN);
+        User currentUser = getCurrentUser();
+        boolean canEdit = isAdminOrSuperAdmin(currentUser);
 
-        if (!isAdmin) {
+        if (!canEdit) {
             OrgMember requestingMember = memberRepository
-                    .findByOrganizationIdAndUserId(orgId, currentUserId)
+                    .findByOrganizationIdAndUserId(orgId, currentUser.getId())
                     .orElseThrow(() -> new ConflictException("You are not a member of this organization"));
 
-            if (requestingMember.getRole() != OrgMemberRole.OWNER && !isAdmin) {
+            if (requestingMember.getRole() != OrgMemberRole.OWNER && !canEdit) {
                 throw new ConflictException("Only the OWNER or ADMIN can remove members from this organization");
             }
         }
@@ -352,6 +382,7 @@ public class OrganizationService {
         memberRepository.delete(memberToRemove);
     }
 
+    @CacheEvict(value = ORG_MEMBERS, key = "#orgId")
     @Transactional
     public OrgMemberDTO transferOwnership(UUID orgId, UUID newOwnerMemberId) {
         if (!orgRepository.existsById(orgId)) {
@@ -361,8 +392,8 @@ public class OrganizationService {
         User currentUser = getCurrentUser();
         boolean isAdmin = currentUser.hasRole(Role.ADMIN);
 
-        if (!isAdmin) {
-            throw new ConflictException("Only ADMIN can transfer organization ownership");
+        if (!isAdminOrSuperAdmin(currentUser)) {
+            throw new ConflictException("Only ADMIN or SUPER_ADMIN can transfer organization ownership");
         }
 
         OrgMember newOwner = memberRepository.findById(newOwnerMemberId)
@@ -401,6 +432,7 @@ public class OrganizationService {
                 .build();
     }
 
+    @Cacheable(value = ORGANIZATIONS_PUBLIC, unless = "#result == null || #result.isEmpty()")
     @Transactional(readOnly = true)
     public List<PublicOrganizationDTO> getPublicOrganizations() {
         return orgRepository.findAllByStatus(OrgStatus.ACTIVE)
@@ -412,13 +444,18 @@ public class OrganizationService {
                         .website(org.getWebsite())
                         .description(org.getDescription())
                         .build()
-                ).toList();
+                ).collect(Collectors.toList());
     }
 
+    @Caching(evict = {
+            @CacheEvict(value = ORGANIZATION, key = "#id"),
+            @CacheEvict(value = ORGANIZATIONS, allEntries = true),
+            @CacheEvict(value = ORGANIZATIONS_PUBLIC, allEntries = true)
+    })
     @Transactional
     public OrganizationResponseDTO changeStatus(UUID id, OrgStatus newStatus) {
         User currentUser = getCurrentUser();
-        if (!currentUser.hasRole(Role.ADMIN)) {
+        if (!isAdminOrSuperAdmin(currentUser)) {
             throw new ConflictException("Only ADMIN can change organization status");
         }
 
@@ -507,12 +544,12 @@ public class OrganizationService {
     }
 
     @Transactional(readOnly = true)
-    public ProgramBRequirementsDTO getByProgram(Long programId) {
+    public Optional<ProgramBRequirementsDTO> getByProgram(Long programId) {
         return requirementsRepository.findByProgramId(programId)
-                .map(this::toProgramBRequirementsDTO)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "No requirements found for application: " + programId
-                ));
+                .map(this::toProgramBRequirementsDTO);
+//                .orElseThrow(() -> new ResourceNotFoundException(
+//                        "No requirements found for application: " + programId
+//                ));
     }
 
     private String saveFile(MultipartFile file, Long applicationId, String type) {
@@ -629,7 +666,7 @@ public class OrganizationService {
                         .role(m.getRole())
                         .joinedAt(m.getJoinedAt())
                         .build()
-                ).toList();
+                ).collect(Collectors.toCollection(ArrayList::new));
         return buildDTO(org, memberDTOs);
     }
 
